src/ts_api/treesitter.h


#define TREE_SITTER_LANGUAGE_VERSION 15
#define TREE_SITTER_MIN_COMPATIBLE_LANGUAGE_VERSION 13
typedef uint16_t TSStateId;
typedef uint16_t TSSymbol;
typedef uint16_t TSFieldId;
typedef struct TSLanguage TSLanguage;
typedef struct TSParser TSParser;
typedef struct TSTree TSTree;
typedef struct TSQuery TSQuery;
typedef struct TSQueryCursor TSQueryCursor;
typedef struct TSLookaheadIterator TSLookaheadIterator;
typedef enum TSSymbolType {
  TSSymbolTypeRegular,
  TSSymbolTypeAnonymous,
  TSSymbolTypeSupertype,
  TSSymbolTypeAuxiliary,
} TSSymbolType;
typedef struct TSPoint {
  uint32_t row;
  uint32_t column;
} TSPoint;
typedef struct TSInputEdit {
  uint32_t start_byte;
  uint32_t old_end_byte;
  uint32_t new_end_byte;
  TSPoint start_point;
  TSPoint old_end_point;
  TSPoint new_end_point;
} TSInputEdit;
typedef struct TSNode {
  uint32_t context[4];
  const void *id;
  const TSTree *tree;
} TSNode;
typedef struct TSTreeCursor {
  const void *tree;
  const void *id;
  uint32_t context[3];
} TSTreeCursor;
typedef struct TSQueryCapture {
  TSNode node;
  uint32_t index;
} TSQueryCapture;
typedef enum TSQuantifier {
  TSQuantifierZero = 0, 
  TSQuantifierZeroOrOne,
  TSQuantifierZeroOrMore,
  TSQuantifierOne,
  TSQuantifierOneOrMore,
} TSQuantifier;
typedef struct TSQueryMatch {
  uint32_t id;
  uint16_t pattern_index;
  uint16_t capture_count;
  const TSQueryCapture *captures;
} TSQueryMatch;
typedef enum TSQueryPredicateStepType {
  TSQueryPredicateStepTypeDone,
  TSQueryPredicateStepTypeCapture,
  TSQueryPredicateStepTypeString,
} TSQueryPredicateStepType;
typedef struct TSQueryPredicateStep {
  TSQueryPredicateStepType type;
  uint32_t value_id;
} TSQueryPredicateStep;
typedef enum TSQueryError {
  TSQueryErrorNone = 0,
  TSQueryErrorSyntax,
  TSQueryErrorNodeType,
  TSQueryErrorField,
  TSQueryErrorCapture,
  TSQueryErrorStructure,
  TSQueryErrorLanguage,
} TSQueryError;
typedef struct TSQueryCursorState {
  void *payload;
  uint32_t current_byte_offset;
} TSQueryCursorState;
typedef struct TSQueryCursorOptions {
  void *payload;
  bool (*progress_callback)(TSQueryCursorState *state);
} TSQueryCursorOptions;
typedef struct TSLanguageMetadata {
  uint8_t major_version;
  uint8_t minor_version;
  uint8_t patch_version;
} TSLanguageMetadata;
void ts_node_edit(TSNode *self, const TSInputEdit *edit);
bool ts_node_eq(TSNode self, TSNode other);
TSTreeCursor ts_tree_cursor_new(TSNode node);
void ts_tree_cursor_delete(TSTreeCursor *self);
void ts_tree_cursor_reset(TSTreeCursor *self, TSNode node);
void ts_tree_cursor_reset_to(TSTreeCursor *dst, const TSTreeCursor *src);
TSNode ts_tree_cursor_current_node(const TSTreeCursor *self);
const char *ts_tree_cursor_current_field_name(const TSTreeCursor *self);
TSFieldId ts_tree_cursor_current_field_id(const TSTreeCursor *self);
bool ts_tree_cursor_goto_parent(TSTreeCursor *self);
bool ts_tree_cursor_goto_next_sibling(TSTreeCursor *self);
bool ts_tree_cursor_goto_previous_sibling(TSTreeCursor *self);
bool ts_tree_cursor_goto_first_child(TSTreeCursor *self);
bool ts_tree_cursor_goto_last_child(TSTreeCursor *self);
void ts_tree_cursor_goto_descendant(TSTreeCursor *self,
                                    uint32_t goal_descendant_index);
uint32_t ts_tree_cursor_current_descendant_index(const TSTreeCursor *self);
uint32_t ts_tree_cursor_current_depth(const TSTreeCursor *self);
int64_t ts_tree_cursor_goto_first_child_for_byte(TSTreeCursor *self,
                                                 uint32_t goal_byte);
int64_t ts_tree_cursor_goto_first_child_for_point(TSTreeCursor *self,
                                                  TSPoint goal_point);
TSTreeCursor ts_tree_cursor_copy(const TSTreeCursor *cursor);
TSQuery *ts_query_new(const TSLanguage *language, const char *source,
                      uint32_t source_len, uint32_t *error_offset,
                      TSQueryError *error_type);
void ts_query_delete(TSQuery *self);
uint32_t ts_query_pattern_count(const TSQuery *self);
uint32_t ts_query_capture_count(const TSQuery *self);
uint32_t ts_query_string_count(const TSQuery *self);
uint32_t ts_query_start_byte_for_pattern(const TSQuery *self,
                                         uint32_t pattern_index);
uint32_t ts_query_end_byte_for_pattern(const TSQuery *self,
                                       uint32_t pattern_index);
const TSQueryPredicateStep *
ts_query_predicates_for_pattern(const TSQuery *self, uint32_t pattern_index,
                                uint32_t *step_count);
bool ts_query_is_pattern_rooted(const TSQuery *self, uint32_t pattern_index);
bool ts_query_is_pattern_non_local(const TSQuery *self, uint32_t pattern_index);
bool ts_query_is_pattern_guaranteed_at_step(const TSQuery *self,
                                            uint32_t byte_offset);
const char *ts_query_capture_name_for_id(const TSQuery *self, uint32_t index,
                                         uint32_t *length);
TSQuantifier ts_query_capture_quantifier_for_id(const TSQuery *self,
                                                uint32_t pattern_index,
                                                uint32_t capture_index);
const char *ts_query_string_value_for_id(const TSQuery *self, uint32_t index,
                                         uint32_t *length);
void ts_query_disable_capture(TSQuery *self, const char *name, uint32_t length);
void ts_query_disable_pattern(TSQuery *self, uint32_t pattern_index);
TSQueryCursor *ts_query_cursor_new(void);
void ts_query_cursor_delete(TSQueryCursor *self);
void ts_query_cursor_exec(TSQueryCursor *self, const TSQuery *query,
                          TSNode node);
void ts_query_cursor_exec_with_options(
    TSQueryCursor *self, const TSQuery *query, TSNode node,
    const TSQueryCursorOptions *query_options);
bool ts_query_cursor_did_exceed_match_limit(const TSQueryCursor *self);
uint32_t ts_query_cursor_match_limit(const TSQueryCursor *self);
void ts_query_cursor_set_match_limit(TSQueryCursor *self, uint32_t limit);
void ts_query_cursor_set_timeout_micros(TSQueryCursor *self,
                                        uint64_t timeout_micros);
uint64_t ts_query_cursor_timeout_micros(const TSQueryCursor *self);
bool ts_query_cursor_set_byte_range(TSQueryCursor *self, uint32_t start_byte,
                                    uint32_t end_byte);
bool ts_query_cursor_set_point_range(TSQueryCursor *self, TSPoint start_point,
                                     TSPoint end_point);
bool ts_query_cursor_next_match(TSQueryCursor *self, TSQueryMatch *match);
void ts_query_cursor_remove_match(TSQueryCursor *self, uint32_t match_id);
bool ts_query_cursor_next_capture(TSQueryCursor *self, TSQueryMatch *match,
                                  uint32_t *capture_index);
void ts_query_cursor_set_max_start_depth(TSQueryCursor *self,
                                         uint32_t max_start_depth);
const TSLanguage *ts_language_copy(const TSLanguage *self);
void ts_language_delete(const TSLanguage *self);
uint32_t ts_language_symbol_count(const TSLanguage *self);
uint32_t ts_language_state_count(const TSLanguage *self);
TSSymbol ts_language_symbol_for_name(const TSLanguage *self, const char *string,
                                     uint32_t length, bool is_named);
uint32_t ts_language_field_count(const TSLanguage *self);
const char *ts_language_field_name_for_id(const TSLanguage *self, TSFieldId id);
TSFieldId ts_language_field_id_for_name(const TSLanguage *self,
                                        const char *name, uint32_t name_length);
const TSSymbol *ts_language_supertypes(const TSLanguage *self,
                                       uint32_t *length);
const TSSymbol *ts_language_subtypes(const TSLanguage *self, TSSymbol supertype,
                                     uint32_t *length);
const char *ts_language_symbol_name(const TSLanguage *self, TSSymbol symbol);
TSSymbolType ts_language_symbol_type(const TSLanguage *self, TSSymbol symbol);
uint32_t ts_language_version(const TSLanguage *self);
uint32_t ts_language_abi_version(const TSLanguage *self);
const TSLanguageMetadata *ts_language_metadata(const TSLanguage *self);
TSStateId ts_language_next_state(const TSLanguage *self, TSStateId state,
                                 TSSymbol symbol);
const char *ts_language_name(const TSLanguage *self);
TSLookaheadIterator *ts_lookahead_iterator_new(const TSLanguage *self,
                                               TSStateId state);
void ts_lookahead_iterator_delete(TSLookaheadIterator *self);
bool ts_lookahead_iterator_reset_state(TSLookaheadIterator *self,
                                       TSStateId state);
bool ts_lookahead_iterator_reset(TSLookaheadIterator *self,
                                 const TSLanguage *language, TSStateId state);
const TSLanguage *
ts_lookahead_iterator_language(const TSLookaheadIterator *self);
bool ts_lookahead_iterator_next(TSLookaheadIterator *self);
TSSymbol ts_lookahead_iterator_current_symbol(const TSLookaheadIterator *self);
const char *
ts_lookahead_iterator_current_symbol_name(const TSLookaheadIterator *self);
typedef struct wasm_engine_t TSWasmEngine;
typedef struct TSWasmStore TSWasmStore;
typedef enum {
  TSWasmErrorKindNone = 0,
  TSWasmErrorKindParse,
  TSWasmErrorKindCompile,
  TSWasmErrorKindInstantiate,
  TSWasmErrorKindAllocate,
} TSWasmErrorKind;
typedef struct {
  TSWasmErrorKind kind;
  char *message;
} TSWasmError;
TSWasmStore *ts_wasm_store_new(TSWasmEngine *engine, TSWasmError *error);
void ts_wasm_store_delete(TSWasmStore *);
const TSLanguage *ts_wasm_store_load_language(TSWasmStore *, const char *name,
                                              const char *wasm,
                                              uint32_t wasm_len,
                                              TSWasmError *error);
size_t ts_wasm_store_language_count(const TSWasmStore *);
bool ts_language_is_wasm(const TSLanguage *);
void ts_parser_set_wasm_store(TSParser *, TSWasmStore *);
TSWasmStore *ts_parser_take_wasm_store(TSParser *);
void ts_set_allocator(void *(*new_malloc)(size_t),
                      void *(*new_calloc)(size_t, size_t),
                      void *(*new_realloc)(void *, size_t),
                      void (*new_free)(void *));