src/ts_api/treesitter.zig

pub extern fn ts_node_edit(self: [*c]TSNode, edit: [*c]const TSInputEdit) void;
pub extern fn ts_node_eq(self: TSNode, other: TSNode) bool;
pub extern fn ts_tree_cursor_new(node: TSNode) TSTreeCursor;
pub extern fn ts_tree_cursor_delete(self: [*c]TSTreeCursor) void;
pub extern fn ts_tree_cursor_reset(self: [*c]TSTreeCursor, node: TSNode) void;
pub extern fn ts_tree_cursor_reset_to(dst: [*c]TSTreeCursor, src: [*c]const TSTreeCursor) void;
pub extern fn ts_tree_cursor_current_node(self: [*c]const TSTreeCursor) TSNode;
pub extern fn ts_tree_cursor_current_field_name(self: [*c]const TSTreeCursor) [*c]const u8;
pub extern fn ts_tree_cursor_current_field_id(self: [*c]const TSTreeCursor) TSFieldId;
pub extern fn ts_tree_cursor_goto_parent(self: [*c]TSTreeCursor) bool;
pub extern fn ts_tree_cursor_goto_next_sibling(self: [*c]TSTreeCursor) bool;
pub extern fn ts_tree_cursor_goto_previous_sibling(self: [*c]TSTreeCursor) bool;
pub extern fn ts_tree_cursor_goto_first_child(self: [*c]TSTreeCursor) bool;
pub extern fn ts_tree_cursor_goto_last_child(self: [*c]TSTreeCursor) bool;
pub extern fn ts_tree_cursor_goto_descendant(self: [*c]TSTreeCursor, goal_descendant_index: u32) void;
pub extern fn ts_tree_cursor_current_descendant_index(self: [*c]const TSTreeCursor) u32;
pub extern fn ts_tree_cursor_current_depth(self: [*c]const TSTreeCursor) u32;
pub extern fn ts_tree_cursor_goto_first_child_for_byte(self: [*c]TSTreeCursor, goal_byte: u32) i64;
pub extern fn ts_tree_cursor_goto_first_child_for_point(self: [*c]TSTreeCursor, goal_point: TSPoint) i64;
pub extern fn ts_tree_cursor_copy(cursor: [*c]const TSTreeCursor) TSTreeCursor;
pub extern fn ts_query_new(language: ?*const TSLanguage, source: [*c]const u8, source_len: u32, error_offset: [*c]u32, error_type: [*c]TSQueryError) ?*TSQuery;
pub extern fn ts_query_delete(self: ?*TSQuery) void;
pub extern fn ts_query_pattern_count(self: ?*const TSQuery) u32;
pub extern fn ts_query_capture_count(self: ?*const TSQuery) u32;
pub extern fn ts_query_string_count(self: ?*const TSQuery) u32;
pub extern fn ts_query_start_byte_for_pattern(self: ?*const TSQuery, pattern_index: u32) u32;
pub extern fn ts_query_end_byte_for_pattern(self: ?*const TSQuery, pattern_index: u32) u32;
pub extern fn ts_query_predicates_for_pattern(self: ?*const TSQuery, pattern_index: u32, step_count: [*c]u32) [*c]const TSQueryPredicateStep;
pub extern fn ts_query_is_pattern_rooted(self: ?*const TSQuery, pattern_index: u32) bool;
pub extern fn ts_query_is_pattern_non_local(self: ?*const TSQuery, pattern_index: u32) bool;
pub extern fn ts_query_is_pattern_guaranteed_at_step(self: ?*const TSQuery, byte_offset: u32) bool;
pub extern fn ts_query_capture_name_for_id(self: ?*const TSQuery, index: u32, length: [*c]u32) [*c]const u8;
pub extern fn ts_query_capture_quantifier_for_id(self: ?*const TSQuery, pattern_index: u32, capture_index: u32) TSQuantifier;
pub extern fn ts_query_string_value_for_id(self: ?*const TSQuery, index: u32, length: [*c]u32) [*c]const u8;
pub extern fn ts_query_disable_capture(self: ?*TSQuery, name: [*c]const u8, length: u32) void;
pub extern fn ts_query_disable_pattern(self: ?*TSQuery, pattern_index: u32) void;
pub extern fn ts_query_cursor_new() ?*TSQueryCursor;
pub extern fn ts_query_cursor_delete(self: ?*TSQueryCursor) void;
pub extern fn ts_query_cursor_exec(self: ?*TSQueryCursor, query: ?*const TSQuery, node: TSNode) void;
pub extern fn ts_query_cursor_exec_with_options(self: ?*TSQueryCursor, query: ?*const TSQuery, node: TSNode, query_options: [*c]const TSQueryCursorOptions) void;
pub extern fn ts_query_cursor_did_exceed_match_limit(self: ?*const TSQueryCursor) bool;
pub extern fn ts_query_cursor_match_limit(self: ?*const TSQueryCursor) u32;
pub extern fn ts_query_cursor_set_match_limit(self: ?*TSQueryCursor, limit: u32) void;
pub extern fn ts_query_cursor_set_timeout_micros(self: ?*TSQueryCursor, timeout_micros: u64) void;
pub extern fn ts_query_cursor_timeout_micros(self: ?*const TSQueryCursor) u64;
pub extern fn ts_query_cursor_set_byte_range(self: ?*TSQueryCursor, start_byte: u32, end_byte: u32) bool;
pub extern fn ts_query_cursor_set_point_range(self: ?*TSQueryCursor, start_point: TSPoint, end_point: TSPoint) bool;
pub extern fn ts_query_cursor_next_match(self: ?*TSQueryCursor, match: [*c]TSQueryMatch) bool;
pub extern fn ts_query_cursor_remove_match(self: ?*TSQueryCursor, match_id: u32) void;
pub extern fn ts_query_cursor_next_capture(self: ?*TSQueryCursor, match: [*c]TSQueryMatch, capture_index: [*c]u32) bool;
pub extern fn ts_query_cursor_set_max_start_depth(self: ?*TSQueryCursor, max_start_depth: u32) void;
pub extern fn ts_language_copy(self: ?*const TSLanguage) ?*const TSLanguage;
pub extern fn ts_language_delete(self: ?*const TSLanguage) void;
pub extern fn ts_language_symbol_count(self: ?*const TSLanguage) u32;
pub extern fn ts_language_state_count(self: ?*const TSLanguage) u32;
pub extern fn ts_language_symbol_for_name(self: ?*const TSLanguage, string: [*c]const u8, length: u32, is_named: bool) TSSymbol;
pub extern fn ts_language_field_count(self: ?*const TSLanguage) u32;
pub extern fn ts_language_field_name_for_id(self: ?*const TSLanguage, id: TSFieldId) [*c]const u8;
pub extern fn ts_language_field_id_for_name(self: ?*const TSLanguage, name: [*c]const u8, name_length: u32) TSFieldId;
pub extern fn ts_language_supertypes(self: ?*const TSLanguage, length: [*c]u32) [*c]const TSSymbol;
pub extern fn ts_language_subtypes(self: ?*const TSLanguage, supertype: TSSymbol, length: [*c]u32) [*c]const TSSymbol;
pub extern fn ts_language_symbol_name(self: ?*const TSLanguage, symbol: TSSymbol) [*c]const u8;
pub extern fn ts_language_symbol_type(self: ?*const TSLanguage, symbol: TSSymbol) TSSymbolType;
pub extern fn ts_language_version(self: ?*const TSLanguage) u32;
pub extern fn ts_language_abi_version(self: ?*const TSLanguage) u32;
pub extern fn ts_language_metadata(self: ?*const TSLanguage) [*c]const TSLanguageMetadata;
pub extern fn ts_language_next_state(self: ?*const TSLanguage, state: TSStateId, symbol: TSSymbol) TSStateId;
pub extern fn ts_language_name(self: ?*const TSLanguage) [*c]const u8;
pub extern fn ts_lookahead_iterator_new(self: ?*const TSLanguage, state: TSStateId) ?*TSLookaheadIterator;
pub extern fn ts_lookahead_iterator_delete(self: ?*TSLookaheadIterator) void;
pub extern fn ts_lookahead_iterator_reset_state(self: ?*TSLookaheadIterator, state: TSStateId) bool;
pub extern fn ts_lookahead_iterator_reset(self: ?*TSLookaheadIterator, language: ?*const TSLanguage, state: TSStateId) bool;
pub extern fn ts_lookahead_iterator_language(self: ?*const TSLookaheadIterator) ?*const TSLanguage;
pub extern fn ts_lookahead_iterator_next(self: ?*TSLookaheadIterator) bool;
pub extern fn ts_lookahead_iterator_current_symbol(self: ?*const TSLookaheadIterator) TSSymbol;
pub extern fn ts_lookahead_iterator_current_symbol_name(self: ?*const TSLookaheadIterator) [*c]const u8;
pub const struct_wasm_engine_t = opaque {};
pub const TSWasmEngine = struct_wasm_engine_t;
pub const struct_TSWasmStore = opaque {};
pub const TSWasmStore = struct_TSWasmStore;
pub const TSWasmErrorKindNone: c_int = 0;
pub const TSWasmErrorKindParse: c_int = 1;
pub const TSWasmErrorKindCompile: c_int = 2;
pub const TSWasmErrorKindInstantiate: c_int = 3;
pub const TSWasmErrorKindAllocate: c_int = 4;
pub const TSWasmErrorKind = c_uint;
pub const TSWasmError = extern struct {
    kind: TSWasmErrorKind = @import("std").mem.zeroes(TSWasmErrorKind),
    message: [*c]u8 = @import("std").mem.zeroes([*c]u8),
};
pub extern fn ts_wasm_store_new(engine: ?*TSWasmEngine, @"error": [*c]TSWasmError) ?*TSWasmStore;
pub extern fn ts_wasm_store_delete(?*TSWasmStore) void;
pub extern fn ts_wasm_store_load_language(?*TSWasmStore, name: [*c]const u8, wasm: [*c]const u8, wasm_len: u32, @"error": [*c]TSWasmError) ?*const TSLanguage;
pub extern fn ts_wasm_store_language_count(?*const TSWasmStore) usize;
pub extern fn ts_language_is_wasm(?*const TSLanguage) bool;
pub extern fn ts_parser_set_wasm_store(?*TSParser, ?*TSWasmStore) void;
pub extern fn ts_parser_take_wasm_store(?*TSParser) ?*TSWasmStore;
pub extern fn ts_set_allocator(new_malloc: ?*const fn (usize) callconv(.c) ?*anyopaque, new_calloc: ?*const fn (usize, usize) callconv(.c) ?*anyopaque, new_realloc: ?*const fn (?*anyopaque, usize) callconv(.c) ?*anyopaque, new_free: ?*const fn (?*anyopaque) callconv(.c) void) void;
pub const TREE_SITTER_LANGUAGE_VERSION = @as(c_int, 15);
pub const TREE_SITTER_MIN_COMPATIBLE_LANGUAGE_VERSION = @as(c_int, 13);
